--- a/genel-cozumler.html
+++ b/genel-cozumler.html
@@ -24,7 +24,7 @@
     </section>
 
     <!-- VirusTotal Warning -->
-    <section class="py-4">
+    <section id="virustotal" class="py-4">
         <div class="container mx-auto px-4 max-w-5xl">
             <div class="info-box warning p-4">
                 <h3 class="font-semibold text-amber-400 mb-3">⚠️ VirusTotal False-Positive Uyarısı</h3>
