--- a/oyunlar/bully.html
+++ b/oyunlar/bully.html
@@ -13,76 +13,162 @@
 <body class="min-h-screen">
     <div id="header-placeholder"></div>
 
-    <section class="hero-gradient py-6">
+    <section class="game-detail-hero">
         <div class="container mx-auto px-4">
-            <div class="max-w-5xl mx-auto">
-                <a href="../index.html" class="text-pink-400 hover:text-pink-300 text-sm mb-2 inline-block">← Tüm Oyunlar</a>
-                <h1 class="text-2xl md:text-3xl font-bold mb-1">Bully</h1>
-                <p class="text-[#b8a3b8] text-sm mb-2">2025 Türkçe Yama</p>
-                <div class="flex gap-2">
-                    <span class="px-2 py-0.5 platform-pc rounded-full text-sm font-medium">PC</span>
-                    <span class="px-2 py-0.5 platform-ps2 rounded-full text-sm font-medium">PS2</span>
+            <div class="max-w-6xl mx-auto">
+                <a href="../index.html" class="back-link mb-6 inline-flex">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M19 12H5M12 19l-7-7 7-7"/>
+                    </svg>
+                    Tüm Oyunlar
+                </a>
+
+                <div class="grid grid-cols-1 lg:grid-cols-12 gap-6 lg:gap-8 items-start game-info-section">
+                    <div class="lg:col-span-3">
+                        <div class="game-cover-card">
+                            <img src="../images/bully.webp" alt="Bully Cover" class="w-full">
+                        </div>
+                    </div>
+
+                    <div class="lg:col-span-9">
+                        <div class="flex flex-wrap items-center gap-3 mb-3">
+                            <span class="platform-tag platform-tag-pc">🖥️ PC</span>
+                            <span class="platform-tag platform-tag-ps2">🎮 PS2</span>
+                        </div>
+                        
+                        <h1 class="text-3xl md:text-4xl font-bold mb-2 game-title-gradient">Bully</h1>
+                        <p class="text-[#c4b5fd] text-lg mb-4">2025 Türkçe Yama</p>
+                        
+                        <p class="text-[#b8a3c8] text-sm mb-6 max-w-2xl">
+                            Rockstar'ın okul temalı aksiyon-macera oyunu Bully için kapsamlı Türkçe yama. Scholarship Edition ve PS2 sürümleri desteklenmektedir.
+                        </p>
+
+                        <div class="grid grid-cols-2 sm:grid-cols-4 gap-3 mb-6">
+                            <div class="quick-info-card">
+                                <div class="quick-info-icon">🎮</div>
+                                <div class="quick-info-label">Platform</div>
+                                <div class="quick-info-value">PC, PS2</div>
+                            </div>
+                            <div class="quick-info-card">
+                                <div class="quick-info-icon">📅</div>
+                                <div class="quick-info-label">Sürüm</div>
+                                <div class="quick-info-value">2025</div>
+                            </div>
+                            <div class="quick-info-card">
+                                <div class="quick-info-icon">🏪</div>
+                                <div class="quick-info-label">Mağazalar</div>
+                                <div class="quick-info-value">Steam, R*</div>
+                            </div>
+                            <div class="quick-info-card">
+                                <div class="quick-info-icon">✅</div>
+                                <div class="quick-info-label">Durum</div>
+                                <div class="quick-info-value">Tamamlandı</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="py-6">
-        <div class="container mx-auto px-4 max-w-5xl">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                <!-- Kurulum -->
-                <div class="solution-card p-4">
-                    <h3 class="font-semibold flex items-center gap-2 mb-3 text-pink-400">
-                        <span>📥</span> Kurulum
-                    </h3>
-                    <div class="info-box info p-2 text-sm">
-                        <p>📄 İndirdiğiniz yama arşivini açın ve içindeki <code>Beni Oku.txt</code> dosyasını okuyun.</p>
-                    </div>
+    <section class="py-8">
+        <div class="container mx-auto px-4 max-w-6xl">
+            <!-- VirusTotal Warning -->
+            <div class="info-banner mb-6">
+                <div class="info-banner-icon">🛡️</div>
+                <div class="info-banner-content">
+                    <p>Antivirüs programları yama dosyalarını yanlışlıkla tehdit olarak algılayabilir. Bu bir <strong>false positive</strong> durumudur. Yamalarımız güvenlidir. Detaylı bilgi için <a href="../genel-cozumler.html#virustotal" class="text-pink-400 underline">Genel Çözümler</a> sayfasına bakın.</p>
                 </div>
+            </div>
 
-                <!-- Bilinen Sorunlar -->
-                <div class="solution-card p-4">
-                    <h3 class="font-semibold flex items-center gap-2 mb-3 text-pink-400">
-                        <span>⚠️</span> Bilinen Sorunlar
-                    </h3>
-                    <div class="space-y-2 text-sm">
-                        <div class="problem-card p-2">
-                            <h4 class="text-yellow-400 font-medium">Oyun açılmıyor / Crash</h4>
-                            <p class="text-[#b8a3b8]">Visual C++ ve DirectX güncel olmalı. Yönetici olarak çalıştırın.</p>
-                        </div>
-                        <div class="problem-card p-2">
-                            <h4 class="text-yellow-400 font-medium">Scholarship Edition sorunları</h4>
-                            <p class="text-[#b8a3b8]">PC sürümü için SilentPatch önerilir.</p>
-                        </div>
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
+                <div class="detail-section-card">
+                    <div class="detail-section-header">
+                        <div class="detail-section-icon">📥</div>
+                        <h3 class="detail-section-title">Kurulum Rehberi</h3>
                     </div>
-                </div>
-
-                <!-- SSS -->
-                <div class="solution-card p-4">
-                    <h3 class="font-semibold flex items-center gap-2 mb-3 text-pink-400">
-                        <span>❓</span> Sık Sorulan Sorular
-                    </h3>
-                    <div class="space-y-2 text-sm">
-                        <div class="problem-card p-2">
-                            <h4 class="text-white font-medium">Hangi sürümler destekleniyor?</h4>
-                            <p class="text-[#b8a3b8]">PC (Scholarship Edition) ve PS2 sürümleri desteklenir.</p>
+                    <div class="detail-section-body space-y-3">
+                        <div class="install-step">
+                            <div class="install-step-number">1</div>
+                            <div class="install-step-content">Yama arşivini indirin ve açın</div>
                         </div>
-                        <div class="problem-card p-2">
-                            <h4 class="text-white font-medium">Steam sürümü uyumlu mu?</h4>
-                            <p class="text-[#b8a3b8]">Evet, Steam sürümü desteklenmektedir.</p>
+                        <div class="install-step">
+                            <div class="install-step-number">2</div>
+                            <div class="install-step-content"><code>Beni Oku.txt</code> dosyasını okuyun</div>
+                        </div>
+                        <div class="install-step">
+                            <div class="install-step-number">3</div>
+                            <div class="install-step-content">PC için dosyaları oyun klasörüne kopyalayın</div>
+                        </div>
+                        <div class="install-step">
+                            <div class="install-step-number">4</div>
+                            <div class="install-step-content">PS2 için ISO dosyasına yamayı uygulayın</div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Yardım -->
-                <div class="solution-card p-4">
-                    <h3 class="font-semibold flex items-center gap-2 mb-3 text-pink-400">
-                        <span>💬</span> Yardım
-                    </h3>
-                    <p class="text-[#b8a3b8] text-sm mb-3">Sorununuzu bulamadınız mı?</p>
-                    <div class="flex flex-wrap gap-2">
-                        <a href="../genel-cozumler.html" class="bg-pink-600 hover:bg-pink-700 px-3 py-1.5 rounded text-sm font-medium transition-colors">🔧 Genel Çözümler</a>
-                        <a href="https://discord.com/invite/zJJKfPrWqR" target="_blank" class="discord-btn text-sm py-1.5">Discord</a>
+                <div class="detail-section-card">
+                    <div class="detail-section-header">
+                        <div class="detail-section-icon">⚠️</div>
+                        <h3 class="detail-section-title">Bilinen Sorunlar</h3>
+                    </div>
+                    <div class="detail-section-body space-y-3">
+                        <div class="issue-item">
+                            <div class="issue-icon">💥</div>
+                            <div class="issue-content">
+                                <h4>Oyun açılmıyor / Crash</h4>
+                                <p>Visual C++ ve DirectX güncel olmalı. Yönetici olarak çalıştırın.</p>
+                            </div>
+                        </div>
+                        <div class="issue-item">
+                            <div class="issue-icon">🔧</div>
+                            <div class="issue-content">
+                                <h4>Scholarship Edition sorunları</h4>
+                                <p>PC sürümü için SilentPatch kurmanız önerilir. Performans ve uyumluluk sorunlarını çözer.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="detail-section-card">
+                    <div class="detail-section-header">
+                        <div class="detail-section-icon">❓</div>
+                        <h3 class="detail-section-title">Sık Sorulan Sorular</h3>
+                    </div>
+                    <div class="detail-section-body space-y-3">
+                        <div class="faq-item-enhanced">
+                            <h4>Hangi sürümler destekleniyor?</h4>
+                            <p>PC (Scholarship Edition) ve PS2 sürümleri tam olarak desteklenmektedir.</p>
+                        </div>
+                        <div class="faq-item-enhanced">
+                            <h4>Steam sürümü uyumlu mu?</h4>
+                            <p>Evet, Steam sürümü tam olarak desteklenmektedir.</p>
+                        </div>
+                        <div class="faq-item-enhanced">
+                            <h4>Anniversary Edition (Mobil) destekleniyor mu?</h4>
+                            <p>Hayır, mobil sürüm için yama bulunmamaktadır.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="detail-section-card">
+                    <div class="detail-section-header">
+                        <div class="detail-section-icon">💬</div>
+                        <h3 class="detail-section-title">Yardım & Destek</h3>
+                    </div>
+                    <div class="detail-section-body">
+                        <p class="text-[#b8a3c8] text-sm mb-4">Sorununuzu burada bulamadıysanız genel çözümler sayfasına göz atın veya Discord'dan yardım alın.</p>
+                        <div class="flex flex-wrap gap-3">
+                            <a href="../genel-cozumler.html" class="action-btn-primary">
+                                🔧 Genel Çözümler
+                            </a>
+                            <a href="https://discord.com/invite/zJJKfPrWqR" target="_blank" class="action-btn-secondary">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.946 2.418-2.157 2.418z"/>
+                                </svg>
+                                Discord
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
