--- a/oyunlar/gta-vice-city-nextgen.html
+++ b/oyunlar/gta-vice-city-nextgen.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body class="min-h-screen">
+<body class="min-h-screen" data-game-theme="gta-vice-city-nextgen">
     <div id="header-placeholder"></div>
 
     <section class="game-detail-hero">
