--- a/oyunlar/rdr2.html
+++ b/oyunlar/rdr2.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body class="min-h-screen">
+<body class="min-h-screen" data-game-theme="rdr2">
     <div id="header-placeholder"></div>
 
     <!-- Game Detail Hero -->
