--- a/oyunlar/gta-v.html
+++ b/oyunlar/gta-v.html
@@ -15,6 +15,20 @@
 
     <!-- Game Detail Hero -->
     <section class="game-detail-hero">
+        <!-- Background Effects -->
+        <div class="hero-grid-bg"></div>
+        <div class="hero-particles">
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+        </div>
+        
         <div class="container mx-auto px-4">
             <div class="max-w-6xl mx-auto">
                 <!-- Back Link -->
