--- a/oyunlar/manhunt.html
+++ b/oyunlar/manhunt.html
@@ -14,6 +14,20 @@
     <div id="header-placeholder"></div>
 
     <section class="game-detail-hero">
+        <!-- Background Effects -->
+        <div class="hero-grid-bg"></div>
+        <div class="hero-particles">
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+        </div>
+        
         <div class="container mx-auto px-4">
             <div class="max-w-6xl mx-auto">
                 <a href="../index.html" class="back-link mb-6 inline-flex">
