--- a/oyunlar/bully.html
+++ b/oyunlar/bully.html
@@ -79,6 +79,8 @@
                                 <div class="quick-info-value">Tamamlandı</div>
                             </div>
                         </div>
+
+                        <a href="https://forum.donanimhaber.com/bully-2025-turkce-yama-pc-ps2--162071840" target="_blank" class="action-btn-primary">📋 Yama Konusuna Git</a>
                     </div>
                 </div>
             </div>
@@ -173,7 +175,10 @@
                     <div class="detail-section-body">
                         <p class="text-[#b8a3c8] text-sm mb-4">Sorununuzu burada bulamadıysanız genel çözümler sayfasına göz atın veya Discord'dan yardım alın.</p>
                         <div class="flex flex-wrap gap-3">
-                            <a href="../genel-cozumler.html" class="action-btn-primary">
+                            <a href="https://forum.donanimhaber.com/bully-2025-turkce-yama-pc-ps2--162071840" target="_blank" class="action-btn-primary">
+                                📋 Yama Konusuna Git
+                            </a>
+                            <a href="../genel-cozumler.html" class="action-btn-secondary">
                                 🔧 Genel Çözümler
                             </a>
                             <a href="https://discord.com/invite/zJJKfPrWqR" target="_blank" class="action-btn-secondary">
