--- a/oyunlar/la-noire.html
+++ b/oyunlar/la-noire.html
@@ -73,11 +73,13 @@
                                 <div class="quick-info-value">Steam, R*</div>
                             </div>
                             <div class="quick-info-card">
-                                <div class="quick-info-icon">✅</div>
+                                <div class="quick-info-icon">🚧</div>
                                 <div class="quick-info-label">Durum</div>
-                                <div class="quick-info-value">Tamamlandı</div>
+                                <div class="quick-info-value">Çeviri Aşamasında</div>
                             </div>
                         </div>
+
+                        <button onclick="alert('🚧 Çeviri Aşamasında\n\nL.A. Noire Türkçe çeviri projesi henüz tamamlanmadı ve yayınlanmadı.\n\nYama hazır olduğunda bu sayfadan duyurulacaktır.')" class="action-btn-primary">📋 Yama Konusuna Git</button>
                     </div>
                 </div>
             </div>
@@ -166,18 +168,17 @@
                         <h3 class="detail-section-title">Yardım & Destek</h3>
                     </div>
                     <div class="detail-section-body">
-                        <p class="text-[#b8a3c8] text-sm mb-4">Sorununuzu bulamadıysanız:</p>
+                        <p class="text-[#b8a3c8] text-sm mb-4">Sorularınız için:</p>
                         <div class="flex flex-wrap gap-3">
-                            <a href="../genel-cozumler.html" class="action-btn-primary">🔧 Genel Çözümler</a>
+                            <button onclick="alert('🚧 Çeviri Aşamasında\n\nL.A. Noire Türkçe çeviri projesi henüz tamamlanmadı ve yayınlanmadı.\n\nYama hazır olduğunda bu sayfadan duyurulacaktır.')" class="action-btn-primary">📋 Yama Konusuna Git</button>
+                            <a href="../genel-cozumler.html" class="action-btn-secondary">🔧 Genel Çözümler</a>
                             <a href="https://discord.com/invite/zJJKfPrWqR" target="_blank" class="action-btn-secondary">Discord</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-
-    <div id="footer-placeholder"></div>
+    </section>    <div id="footer-placeholder"></div>
     <script src="../js/partials.js"></script>
 </body>
 </html>
