--- a/oyunlar/rdr2.html
+++ b/oyunlar/rdr2.html
@@ -80,6 +80,8 @@
                                 <div class="quick-info-value">Geliştiriliyor</div>
                             </div>
                         </div>
+
+                        <a href="https://forum.donanimhaber.com/red-dead-redemption-ii-2025-turkce-yama--158486074" target="_blank" class="action-btn-primary">📋 Yama Konusuna Git</a>
                     </div>
                 </div>
             </div>
@@ -182,7 +184,10 @@
                     <div class="detail-section-body">
                         <p class="text-[#b8a3c8] text-sm mb-4">Beta sürümle ilgili geri bildirimlerinizi Discord'dan paylaşabilirsiniz.</p>
                         <div class="flex flex-wrap gap-3">
-                            <a href="../genel-cozumler.html" class="action-btn-primary">
+                            <a href="https://forum.donanimhaber.com/red-dead-redemption-ii-2025-turkce-yama--158486074" target="_blank" class="action-btn-primary">
+                                📋 Yama Konusuna Git
+                            </a>
+                            <a href="../genel-cozumler.html" class="action-btn-secondary">
                                 🔧 Genel Çözümler
                             </a>
                             <a href="https://discord.com/invite/zJJKfPrWqR" target="_blank" class="action-btn-secondary">
