--- a/oyunlar/gta-liberty-city-stories.html
+++ b/oyunlar/gta-liberty-city-stories.html
@@ -80,6 +80,8 @@
                                 <div class="quick-info-value">Tamamlandı</div>
                             </div>
                         </div>
+
+                        <a href="https://forum.donanimhaber.com/grand-theft-auto-liberty-city-stories-2023-turkce-yama-ps2-psp--154778210" target="_blank" class="action-btn-primary">📋 Yama Konusuna Git</a>
                     </div>
                 </div>
             </div>
@@ -170,7 +172,8 @@
                     <div class="detail-section-body">
                         <p class="text-[#b8a3c8] text-sm mb-4">Sorununuzu bulamadıysanız:</p>
                         <div class="flex flex-wrap gap-3">
-                            <a href="../genel-cozumler.html" class="action-btn-primary">🔧 Genel Çözümler</a>
+                            <a href="https://forum.donanimhaber.com/grand-theft-auto-liberty-city-stories-2023-turkce-yama-ps2-psp--154778210" target="_blank" class="action-btn-primary">📋 Yama Konusuna Git</a>
+                            <a href="../genel-cozumler.html" class="action-btn-secondary">🔧 Genel Çözümler</a>
                             <a href="https://discord.com/invite/zJJKfPrWqR" target="_blank" class="action-btn-secondary">Discord</a>
                         </div>
                     </div>
