--- a/oyunlar/rdr-goty.html
+++ b/oyunlar/rdr-goty.html
@@ -79,6 +79,8 @@
                                 <div class="quick-info-value">Tamamlandı</div>
                             </div>
                         </div>
+
+                        <a href="https://forum.donanimhaber.com/yapim-asamasinda-red-dead-redemption-turkce-yama-rpsc3-xenia--152141033" target="_blank" class="action-btn-primary">📋 Yama Konusuna Git</a>
                     </div>
                 </div>
             </div>
@@ -176,7 +178,8 @@
                     <div class="detail-section-body">
                         <p class="text-[#b8a3c8] text-sm mb-4">Sorununuzu bulamadıysanız:</p>
                         <div class="flex flex-wrap gap-3">
-                            <a href="../genel-cozumler.html" class="action-btn-primary">🔧 Genel Çözümler</a>
+                            <a href="https://forum.donanimhaber.com/yapim-asamasinda-red-dead-redemption-turkce-yama-rpsc3-xenia--152141033" target="_blank" class="action-btn-primary">📋 Yama Konusuna Git</a>
+                            <a href="../genel-cozumler.html" class="action-btn-secondary">🔧 Genel Çözümler</a>
                             <a href="https://discord.com/invite/zJJKfPrWqR" target="_blank" class="action-btn-secondary">Discord</a>
                         </div>
                     </div>
