--- a/oyunlar/xiii-classic.html
+++ b/oyunlar/xiii-classic.html
@@ -65,7 +65,7 @@
                             <div class="quick-info-card">
                                 <div class="quick-info-icon">📅</div>
                                 <div class="quick-info-label">Sürüm</div>
-                                <div class="quick-info-value">2024</div>
+                                <div class="quick-info-value">2019</div>
                             </div>
                             <div class="quick-info-card">
                                 <div class="quick-info-icon">🏪</div>
@@ -78,6 +78,8 @@
                                 <div class="quick-info-value">Tamamlandı</div>
                             </div>
                         </div>
+
+                        <a href="https://forum.donanimhaber.com/xiii-classic-turkce-yama--148555577" target="_blank" class="action-btn-primary">📋 Yama Konusuna Git</a>
                     </div>
                 </div>
             </div>
@@ -168,7 +170,8 @@
                     <div class="detail-section-body">
                         <p class="text-[#b8a3c8] text-sm mb-4">Sorununuzu bulamadıysanız:</p>
                         <div class="flex flex-wrap gap-3">
-                            <a href="../genel-cozumler.html" class="action-btn-primary">🔧 Genel Çözümler</a>
+                            <a href="https://forum.donanimhaber.com/xiii-classic-turkce-yama--148555577" target="_blank" class="action-btn-primary">📋 Yama Konusuna Git</a>
+                            <a href="../genel-cozumler.html" class="action-btn-secondary">🔧 Genel Çözümler</a>
                             <a href="https://discord.com/invite/zJJKfPrWqR" target="_blank" class="action-btn-secondary">Discord</a>
                         </div>
                     </div>
