--- a/index.html
+++ b/index.html
@@ -173,18 +173,18 @@
 
                 <!-- GTA Vice City Nextgen -->
                 <a href="oyunlar/gta-vice-city-nextgen.html" class="game-card" data-year="2024">
-                    <img src="images/gta-vice-city-nextgen.webp" alt="GTA Vice City Nextgen" class="game-card-cover">
+                    <img src="images/gta-vice-city-nextgen.webp" alt="Grand Theft Auto Vice City Nextgen" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">GTA: Vice City Nextgen Edition</h3>
+                        <h3 class="font-semibold text-white">Grand Theft Auto: Vice City Nextgen Edition</h3>
                         <p class="text-[#b8a3b8]">Modernize edilmiş Vice City</p>
                     </div>
                 </a>
 
-                <!-- RDR PC -->
+                <!-- Red Dead Redemption PC -->
                 <a href="oyunlar/rdr-pc.html" class="game-card" data-year="2024">
                     <img src="images/rdr-pc.webp" alt="Red Dead Redemption PC" class="game-card-cover">
                     <div class="platform-badges">
@@ -197,7 +197,7 @@
                     </div>
                 </a>
 
-                <!-- RDR2 Beta -->
+                <!-- Red Dead Redemption 2 Beta -->
                 <a href="oyunlar/rdr2.html" class="game-card" data-year="2026">
                     <img src="images/rdr2.webp" alt="Red Dead Redemption 2" class="game-card-cover">
                     <div class="platform-badges">
@@ -238,22 +238,22 @@
                     </div>
                 </a>
 
-                <!-- GTA V -->
+                <!-- Grand Theft Auto V -->
                 <a href="oyunlar/gta-v.html" class="game-card" data-year="2024">
-                    <img src="images/gta-v.webp" alt="GTA V" class="game-card-cover">
+                    <img src="images/gta-v.webp" alt="Grand Theft Auto V" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">GTA V: Legacy & Enhanced</h3>
+                        <h3 class="font-semibold text-white">Grand Theft Auto V: Legacy & Enhanced</h3>
                         <p class="text-[#b8a3b8]">Los Santos'ta üç suçlunun hikayesi</p>
                     </div>
                 </a>
 
-                <!-- GTA Liberty City Stories -->
+                <!-- Grand Theft Auto Liberty City Stories -->
                 <a href="oyunlar/gta-liberty-city-stories.html" class="game-card" data-year="2023">
-                    <img src="images/gta-liberty-city-stories.webp" alt="GTA Liberty City Stories" class="game-card-cover">
+                    <img src="images/gta-liberty-city-stories.webp" alt="Grand Theft Auto Liberty City Stories" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-year rounded-full text-xs">2023</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
@@ -261,12 +261,12 @@
                         <span class="px-2 py-0.5 platform-psp rounded-full text-xs">PSP</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">GTA: Liberty City Stories</h3>
+                        <h3 class="font-semibold text-white">Grand Theft Auto: Liberty City Stories</h3>
                         <p class="text-[#b8a3b8]">Toni Cipriani'nin yükselişi</p>
                     </div>
                 </a>
 
-                <!-- RDR GOTY -->
+                <!-- Red Dead Redemption GOTY -->
                 <a href="oyunlar/rdr-goty.html" class="game-card" data-year="2023">
                     <img src="images/rdr-goty.webp" alt="Red Dead Redemption GOTY" class="game-card-cover">
                     <div class="platform-badges">
@@ -275,48 +275,48 @@
                         <span class="px-2 py-0.5 platform-emulator rounded-full text-xs">Ryujinx</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">RDR GOTY & Undead Nightmare</h3>
+                        <h3 class="font-semibold text-white">Red Dead Redemption GOTY & Undead Nightmare</h3>
                         <p class="text-[#b8a3b8]">Emülatör için tam paket</p>
                     </div>
                 </a>
 
-                <!-- GTA Trilogy Definitive -->
+                <!-- Grand Theft Auto Trilogy Definitive -->
                 <a href="oyunlar/gta-trilogy-definitive.html" class="game-card" data-year="2022">
-                    <img src="images/gta-trilogy-definitive.webp" alt="GTA Trilogy Definitive" class="game-card-cover">
+                    <img src="images/gta-trilogy-definitive.webp" alt="Grand Theft Auto Trilogy Definitive" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-year rounded-full text-xs">2022</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">GTA: The Trilogy - DE</h3>
+                        <h3 class="font-semibold text-white">Grand Theft Auto: The Trilogy - Definitive Edition</h3>
                         <p class="text-[#b8a3b8]">Remastered klasik üçleme</p>
                     </div>
                 </a>
 
-                <!-- GTA Vice City Stories -->
+                <!-- Grand Theft Auto Vice City Stories -->
                 <a href="oyunlar/gta-vice-city-stories.html" class="game-card" data-year="2022">
-                    <img src="images/gta-vice-city-stories.webp" alt="GTA Vice City Stories" class="game-card-cover">
+                    <img src="images/gta-vice-city-stories.webp" alt="Grand Theft Auto Vice City Stories" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-year rounded-full text-xs">2022</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                         <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">GTA: Vice City Stories</h3>
+                        <h3 class="font-semibold text-white">Grand Theft Auto: Vice City Stories</h3>
                         <p class="text-[#b8a3b8]">Vic Vance'in Vice City macerası</p>
                     </div>
                 </a>
 
-                <!-- GTA Trilogy Classic -->
+                <!-- Grand Theft Auto Trilogy Classic -->
                 <a href="oyunlar/gta-trilogy-classic.html" class="game-card" data-year="2023">
-                    <img src="images/gta-trilogy-classic.webp" alt="GTA Trilogy Classic" class="game-card-cover">
+                    <img src="images/gta-trilogy-classic.webp" alt="Grand Theft Auto Trilogy Classic" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-year rounded-full text-xs">2023</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                         <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">GTA III, Vice City & San Andreas</h3>
+                        <h3 class="font-semibold text-white">Grand Theft Auto III, Vice City & San Andreas</h3>
                         <p class="text-[#b8a3b8]">Orijinal klasik üçleme</p>
                     </div>
                 </a>
