--- a/oyunlar/gta-trilogy-definitive.html
+++ b/oyunlar/gta-trilogy-definitive.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GTA The Trilogy Definitive Edition Türkçe Yama destek sayfası.">
-    <meta name="keywords" content="GTA Trilogy Definitive türkçe, remaster türkçe yama">
+    <meta name="description" content="Grand Theft Auto The Trilogy Definitive Edition Türkçe Yama destek sayfası.">
+    <meta name="keywords" content="Grand Theft Auto Trilogy Definitive türkçe, remaster türkçe yama">
     <meta name="author" content="0xDeftones">
-    <title>GTA: The Trilogy - Definitive Edition - CriminaL277 & 0xDeftones Destek</title>
+    <title>Grand Theft Auto: The Trilogy - Definitive Edition - CriminaL277 & 0xDeftones Destek</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -49,11 +49,11 @@
                             <span class="platform-tag platform-tag-pc">🖥️ PC</span>
                         </div>
                         
-                        <h1 class="text-3xl md:text-4xl font-bold mb-2 game-title-gradient">GTA: The Trilogy - Definitive Edition</h1>
+                        <h1 class="text-3xl md:text-4xl font-bold mb-2 game-title-gradient">Grand Theft Auto: The Trilogy - Definitive Edition</h1>
                         <p class="text-[#c4b5fd] text-lg mb-4">Türkçe Yama (Remastered)</p>
                         
                         <p class="text-[#b8a3c8] text-sm mb-6 max-w-2xl">
-                            GTA III, Vice City ve San Andreas'ın yenilenmiş sürümleri için Türkçe yama. Tek kurulumla üç oyun birden yamalanır.
+                            Grand Theft Auto III, Vice City ve San Andreas'ın yenilenmiş sürümleri için Türkçe yama. Tek kurulumla üç oyun birden yamalanır.
                         </p>
 
                         <div class="grid grid-cols-2 sm:grid-cols-4 gap-3 mb-6">
