--- a/oyunlar/gta-v.html
+++ b/oyunlar/gta-v.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GTA V Legacy & Enhanced Türkçe Yama destek sayfası. Kurulum rehberi ve hata çözümleri.">
-    <meta name="keywords" content="GTA V türkçe, GTA 5 türkçe yama, kurulum, enhanced">
+    <meta name="description" content="Grand Theft Auto V Legacy & Enhanced Türkçe Yama destek sayfası. Kurulum rehberi ve hata çözümleri.">
+    <meta name="keywords" content="Grand Theft Auto V türkçe, GTA 5 türkçe yama, kurulum, enhanced">
     <meta name="author" content="0xDeftones">
-    <title>GTA V Legacy & Enhanced - CriminaL277 & 0xDeftones Destek</title>
+    <title>Grand Theft Auto V Legacy & Enhanced - CriminaL277 & 0xDeftones Destek</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -57,7 +57,7 @@
                         <p class="text-[#c4b5fd] text-lg mb-4">Legacy & Enhanced Türkçe Yama</p>
                         
                         <p class="text-[#b8a3c8] text-sm mb-6 max-w-2xl">
-                            Rockstar Games'in efsanevi açık dünya oyunu GTA V için kapsamlı Türkçe yama. Tüm hikaye modu metinleri, menüler ve altyazılar Türkçeye çevrilmiştir.
+                            Rockstar Games'in efsanevi açık dünya oyunu Grand Theft Auto V için kapsamlı Türkçe yama. Tüm hikaye modu metinleri, menüler ve altyazılar Türkçeye çevrilmiştir.
                         </p>
 
                         <!-- Quick Info -->
@@ -107,7 +107,7 @@
                 <div class="warning-banner-icon">🚫</div>
                 <div class="warning-banner-content">
                     <h4>Online Uyarısı</h4>
-                    <p>GTA Online metinleri çevrilmemiştir. Online modda yama kullanmanızı önermiyoruz, ban riski oluşturabilir.</p>
+                    <p>Grand Theft Auto Online metinleri çevrilmemiştir. Online modda yama kullanmanızı önermiyoruz, ban riski oluşturabilir.</p>
                 </div>
             </div>
 
