--- a/oyunlar/gta-vice-city-nextgen.html
+++ b/oyunlar/gta-vice-city-nextgen.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GTA Vice City Nextgen Edition Türkçe Yama destek sayfası.">
-    <meta name="keywords" content="GTA Vice City Nextgen türkçe, Vice City mod türkçe yama">
+    <meta name="description" content="Grand Theft Auto Vice City Nextgen Edition Türkçe Yama destek sayfası.">
+    <meta name="keywords" content="Grand Theft Auto Vice City Nextgen türkçe, Vice City mod türkçe yama">
     <meta name="author" content="0xDeftones">
-    <title>GTA: Vice City Nextgen Edition - CriminaL277 & 0xDeftones Destek</title>
+    <title>Grand Theft Auto: Vice City Nextgen Edition - CriminaL277 & 0xDeftones Destek</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -49,7 +49,7 @@
                             <span class="platform-tag platform-tag-pc">🖥️ PC</span>
                         </div>
                         
-                        <h1 class="text-3xl md:text-4xl font-bold mb-2 game-title-gradient">GTA: Vice City Nextgen Edition</h1>
+                        <h1 class="text-3xl md:text-4xl font-bold mb-2 game-title-gradient">Grand Theft Auto: Vice City Nextgen Edition</h1>
                         <p class="text-[#c4b5fd] text-lg mb-4">Türkçe Yama (Mod Projesi)</p>
                         
                         <p class="text-[#b8a3c8] text-sm mb-6 max-w-2xl">
