--- a/oyunlar/gta-liberty-city-stories.html
+++ b/oyunlar/gta-liberty-city-stories.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GTA Liberty City Stories 2023 Türkçe Yama destek sayfası.">
-    <meta name="keywords" content="GTA Liberty City Stories türkçe, LCS türkçe yama">
+    <meta name="description" content="Grand Theft Auto Liberty City Stories 2023 Türkçe Yama destek sayfası.">
+    <meta name="keywords" content="Grand Theft Auto Liberty City Stories türkçe, LCS türkçe yama">
     <meta name="author" content="0xDeftones">
-    <title>GTA: Liberty City Stories - CriminaL277 & 0xDeftones Destek</title>
+    <title>Grand Theft Auto: Liberty City Stories - CriminaL277 & 0xDeftones Destek</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -51,11 +51,11 @@
                             <span class="platform-tag platform-tag-psp">📱 PSP</span>
                         </div>
                         
-                        <h1 class="text-3xl md:text-4xl font-bold mb-2 game-title-gradient">GTA: Liberty City Stories</h1>
+                        <h1 class="text-3xl md:text-4xl font-bold mb-2 game-title-gradient">Grand Theft Auto: Liberty City Stories</h1>
                         <p class="text-[#c4b5fd] text-lg mb-4">2023 Türkçe Yama</p>
                         
                         <p class="text-[#b8a3c8] text-sm mb-6 max-w-2xl">
-                            GTA III'ün prequel hikayesi için PC, PS2 ve PSP platformlarında Türkçe yama desteği.
+                            Grand Theft Auto III'ün prequel hikayesi için PC, PS2 ve PSP platformlarında Türkçe yama desteği.
                         </p>
 
                         <div class="grid grid-cols-2 sm:grid-cols-4 gap-3 mb-6">
