--- a/oyunlar/gta-trilogy-classic.html
+++ b/oyunlar/gta-trilogy-classic.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GTA III, Vice City ve San Andreas 2023 Türkçe Yama destek sayfası.">
-    <meta name="keywords" content="GTA III türkçe, Vice City türkçe, San Andreas türkçe, 2023 yama">
+    <meta name="description" content="Grand Theft Auto III, Vice City ve San Andreas 2023 Türkçe Yama destek sayfası.">
+    <meta name="keywords" content="Grand Theft Auto III türkçe, Vice City türkçe, San Andreas türkçe, 2023 yama">
     <meta name="author" content="0xDeftones">
-    <title>GTA III, Vice City & San Andreas - CriminaL277 & 0xDeftones Destek</title>
+    <title>Grand Theft Auto III, Vice City & San Andreas - CriminaL277 & 0xDeftones Destek</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -50,11 +50,11 @@
                             <span class="platform-tag platform-tag-ps2">🎮 PS2</span>
                         </div>
                         
-                        <h1 class="text-3xl md:text-4xl font-bold mb-2 game-title-gradient">GTA III, Vice City & San Andreas</h1>
+                        <h1 class="text-3xl md:text-4xl font-bold mb-2 game-title-gradient">Grand Theft Auto III, Vice City & San Andreas</h1>
                         <p class="text-[#c4b5fd] text-lg mb-4">2023 Türkçe Yamaları (Klasik Sürümler)</p>
                         
                         <p class="text-[#b8a3c8] text-sm mb-6 max-w-2xl">
-                            GTA serisinin efsanevi üçlemesi için kapsamlı Türkçe yamalar. Orijinal PC ve PS2 sürümleri desteklenmektedir.
+                            Grand Theft Auto serisinin efsanevi üçlemesi için kapsamlı Türkçe yamalar. Orijinal PC ve PS2 sürümleri desteklenmektedir.
                         </p>
 
                         <div class="grid grid-cols-2 sm:grid-cols-4 gap-3 mb-6">
