--- a/oyunlar/gta-vice-city-stories.html
+++ b/oyunlar/gta-vice-city-stories.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GTA Vice City Stories 2022 Türkçe Yama destek sayfası.">
-    <meta name="keywords" content="GTA Vice City Stories türkçe, VCS türkçe yama">
+    <meta name="description" content="Grand Theft Auto Vice City Stories 2022 Türkçe Yama destek sayfası.">
+    <meta name="keywords" content="Grand Theft Auto Vice City Stories türkçe, VCS türkçe yama">
     <meta name="author" content="0xDeftones">
-    <title>GTA: Vice City Stories - CriminaL277 & 0xDeftones Destek</title>
+    <title>Grand Theft Auto: Vice City Stories - CriminaL277 & 0xDeftones Destek</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -50,7 +50,7 @@
                             <span class="platform-tag platform-tag-ps2">🎮 PS2</span>
                         </div>
                         
-                        <h1 class="text-3xl md:text-4xl font-bold mb-2 game-title-gradient">GTA: Vice City Stories</h1>
+                        <h1 class="text-3xl md:text-4xl font-bold mb-2 game-title-gradient">Grand Theft Auto: Vice City Stories</h1>
                         <p class="text-[#c4b5fd] text-lg mb-4">2022 Türkçe Yama</p>
                         
                         <p class="text-[#b8a3c8] text-sm mb-6 max-w-2xl">
