--- a/oyunlar/rdr-goty.html
+++ b/oyunlar/rdr-goty.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Red Dead Redemption GOTY & Undead Nightmare Türkçe Yama destek sayfası.">
-    <meta name="keywords" content="RDR türkçe, Red Dead Redemption türkçe yama, Xenia, Ryujinx">
+    <meta name="keywords" content="Red Dead Redemption türkçe, Red Dead Redemption türkçe yama, Xenia, Ryujinx">
     <meta name="author" content="0xDeftones">
-    <title>Red Dead Redemption GOTY - CriminaL277 & 0xDeftones Destek</title>
+    <title>Red Dead Redemption GOTY & Undead Nightmare - CriminaL277 & 0xDeftones Destek</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
