--- a/oyunlar/rdr-pc.html
+++ b/oyunlar/rdr-pc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Red Dead Redemption PC Türkçe Yama destek sayfası.">
-    <meta name="keywords" content="RDR PC türkçe, Red Dead Redemption PC türkçe yama">
+    <meta name="keywords" content="Red Dead Redemption PC türkçe, Red Dead Redemption PC türkçe yama">
     <meta name="author" content="0xDeftones">
     <title>Red Dead Redemption PC - CriminaL277 & 0xDeftones Destek</title>
     <script src="https://cdn.tailwindcss.com"></script>
