--- a/oyunlar/rdr2.html
+++ b/oyunlar/rdr2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Red Dead Redemption II 2025 Türkçe Yama (Beta) destek sayfası.">
-    <meta name="keywords" content="RDR2 türkçe, Red Dead Redemption 2 türkçe yama">
+    <meta name="keywords" content="Red Dead Redemption 2 türkçe, Red Dead Redemption II türkçe yama">
     <meta name="author" content="0xDeftones">
     <title>Red Dead Redemption II - CriminaL277 & 0xDeftones Destek</title>
     <script src="https://cdn.tailwindcss.com"></script>
