--- a/genel-cozumler.html
+++ b/genel-cozumler.html
@@ -435,25 +435,25 @@
                                 <div class="text-center">
                                     <a href="images/guide/folder-step-1.webp" target="_blank" class="block bg-gray-800/50 border border-gray-600 hover:border-pink-500 rounded-lg p-3 transition-all cursor-zoom-in">
                                         <img src="images/guide/folder-step-1.webp" alt="Adım 1" class="w-full rounded mb-2">
-                                        <p><span class="text-pink-400 font-medium">1.</span> <span class="text-gray-300">Sağ tık → Özellikler</span></p>
+                                        <p><span class="text-pink-400 font-medium">1.</span> <span class="text-gray-300">Sağ tık → Özellikler → Güvenlik sekmesine geçiş yap</span></p>
                                     </a>
                                 </div>
                                 <div class="text-center">
                                     <a href="images/guide/folder-step-2.webp" target="_blank" class="block bg-gray-800/50 border border-gray-600 hover:border-pink-500 rounded-lg p-3 transition-all cursor-zoom-in">
                                         <img src="images/guide/folder-step-2.webp" alt="Adım 2" class="w-full rounded mb-2">
-                                        <p><span class="text-pink-400 font-medium">2.</span> <span class="text-gray-300">Güvenlik sekmesi</span></p>
+                                        <p><span class="text-pink-400 font-medium">2.</span> <span class="text-gray-300">Düzenle seçeneğine tıkla</span></p>
                                     </a>
                                 </div>
                                 <div class="text-center">
                                     <a href="images/guide/folder-step-3.webp" target="_blank" class="block bg-gray-800/50 border border-gray-600 hover:border-pink-500 rounded-lg p-3 transition-all cursor-zoom-in">
                                         <img src="images/guide/folder-step-3.webp" alt="Adım 3" class="w-full rounded mb-2">
-                                        <p><span class="text-pink-400 font-medium">3.</span> <span class="text-gray-300">Düzenle</span></p>
+                                        <p><span class="text-pink-400 font-medium">3.</span> <span class="text-gray-300">Grup ya da kullanıcı adları kısmından Users seçeneğini seç</span></p>
                                     </a>
                                 </div>
                                 <div class="text-center">
                                     <a href="images/guide/folder-step-4.webp" target="_blank" class="block bg-gray-800/50 border border-gray-600 hover:border-pink-500 rounded-lg p-3 transition-all cursor-zoom-in">
                                         <img src="images/guide/folder-step-4.webp" alt="Adım 4" class="w-full rounded mb-2">
-                                        <p><span class="text-pink-400 font-medium">4.</span> <span class="text-gray-300">Users → Tam denetim → İzin Ver → Uygula</span></p>
+                                        <p><span class="text-pink-400 font-medium">4.</span> <span class="text-gray-300">Tam denetim → İzin Ver → Uygula</span></p>
                                     </a>
                                 </div>
                             </div>
