--- a/oyunlar/manhunt-2.html
+++ b/oyunlar/manhunt-2.html
@@ -8,7 +8,7 @@
     <meta name="author" content="0xDeftones">
     <title>Manhunt 2 - CriminaL277 & 0xDeftones Destek</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/config.js"></script>
 </head>
 <body class="min-h-screen" data-game-theme="manhunt-2">
     <div id="header-placeholder"></div>
