--- a/oyunlar/rdr-pc.html
+++ b/oyunlar/rdr-pc.html
@@ -8,7 +8,7 @@
     <meta name="author" content="0xDeftones">
     <title>Red Dead Redemption PC - CriminaL277 & 0xDeftones Destek</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/config.js"></script>
 </head>
 <body class="min-h-screen" data-game-theme="rdr-pc">
     <div id="header-placeholder"></div>
